solution for Movie workshop in D4W3

--- a/week-03/day-4/Navigate/templates/index.html
+++ b/week-03/day-4/Navigate/templates/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="../static/index.css">
     <title>Homepage</title>
-    <link rel = "stylesheet" type = "text/css" href = "../static/movie.css">
 </head>
 <body>
-    <h1>Reconmended Movies</h1>
+    <h1>Homepage</h1>
     <div>
-        <p class = "oneday"><a href = "{{ url_for('static', filename = 'oneday.html')}}">One Day</a></p>
+        <p class = "oneday"><a href = "{{ url_for('static', filename = 'oneday.html')}}"><b>One Day</b></a></p>
         <p>One Day is a 2011 British-American romantic tragedy film directed by Lone Scherfig, and starring Anne Hathaway and Jim Sturgess. Focus Features released the film theatrically in August 2011. It was adapted by David Nicholls from his 2009 novel of the same name.</p>
-        <p class = "likecrazy"><a href = "{{ url_for('static', filename = 'likecrazy.html')}}">Like Crazy</a></p>
+        <p class = "likecrazy"><a href = "{{ url_for('static', filename = 'likecrazy.html')}}"><b>Like Crazy</b></a></p>
         <p>Like Crazy is a 2011 American romantic drama film directed by Drake Doremus and starring Anton Yelchin, Felicity Jones and Jennifer Lawrence. </p>
-        <p class = warcraft><a href = "{{ url_for('static', filename = 'warcraft.html')}}">Warcraft</a></p>
-        <p>Warcraft (alternatively known as Warcraft: The Beginning)[4] is a 2016 American action fantasy film directed by Duncan Jones and written by Charles Leavitt and Jones. </p>
-        <p class = "madworld"><a href = "{{ url_for('static', filename = 'madworld.html')}}">Mad World</a></p>
+        <p class = warcraft><a href = "{{ url_for('static', filename = 'warcraft.html')}}"><b>Warcraft</b></a></p>
+        <p>Warcraft (alternatively known as Warcraft: The Beginning) is a 2016 American action fantasy film directed by Duncan Jones and written by Charles Leavitt and Jones. </p>
+        <p class = "madworld"><a href = "{{ url_for('static', filename = 'madworld.html')}}"><b>Mad World</b></a></p>
         <p>Mad World is a 2016 Hong Kong drama film directed by Wong Chun and starring Shawn Yue, Eric Tsang, Elaine Jin and Charmaine Fong.[3]</p>
-        <p class = "loveactually"><a href = "{{ url_for('static', filename = 'loveactually.html')}}">Love Actually</a></p>
+        <p class = "loveactually"><a href = "{{ url_for('static', filename = 'loveactually.html')}}"><b>Love Actually</b></a></p>
         <p>Love Actually is a 2003 Christmas-themed romantic comedy film written and directed by Richard Curtis.</p>
+        <p class = "add"><a href="apimovie"><b>Add movie</b></a></p>
     </div>
 </body>
 </html>
-
